[gd_scene load_steps=12 format=3 uid="uid://cs1gdvdlh7iug"]

[ext_resource type="Script" uid="uid://dy8mpc3jjrj22" path="res://Scripts/UI Scripts/player_ui.gd" id="1_yk5xn"]
[ext_resource type="Texture2D" uid="uid://cp8t1jux7qgtf" path="res://Assets/Sprites/UI Sprites/Life Bar - Extended.png" id="2_yk5xn"]
[ext_resource type="Texture2D" uid="uid://boh3siobv4u3u" path="res://Assets/Sprites/UI Sprites/Life Bar - Extended Progress.png" id="3_d0beh"]
[ext_resource type="Texture2D" uid="uid://3py7x1fbu2hs" path="res://Assets/Atlas Maps/player_ui_slot.tres" id="4_gcuxo"]
[ext_resource type="Texture2D" uid="uid://dtbhdif41mvqr" path="res://Assets/Sprites/UI Sprites/UI Abilities.png" id="5_vihih"]
[ext_resource type="Texture2D" uid="uid://cox2vmivhduqd" path="res://Assets/Atlas Maps/player_ui_slot_highlight.tres" id="6_jxklt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3nrpj"]
atlas = ExtResource("5_vihih")
region = Rect2(32, 0, 32, 32)

[sub_resource type="CanvasTexture" id="CanvasTexture_jbpjp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6jssq"]
atlas = ExtResource("5_vihih")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uflt7"]
atlas = ExtResource("5_vihih")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbpjp"]
atlas = ExtResource("5_vihih")
region = Rect2(32, 32, 32, 32)

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yk5xn")

[node name="PlayerHealthBar" type="TextureProgressBar" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 768.0
offset_top = 10.0
offset_right = -960.0
offset_bottom = 42.0
grow_horizontal = 2
scale = Vector2(2, 2)
texture_over = ExtResource("2_yk5xn")
texture_progress = ExtResource("3_d0beh")

[node name="Upgrade Slots" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 820.0
offset_top = -80.0
offset_right = -960.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)

[node name="UpgradeSlot1" type="TextureRect" parent="Upgrade Slots"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_gcuxo")

[node name="Slot1Highlight" type="TextureRect" parent="Upgrade Slots/UpgradeSlot1"]
layout_mode = 0
offset_left = -4.0
offset_top = -4.0
offset_right = 36.0
offset_bottom = 36.0
texture = ExtResource("6_jxklt")

[node name="Label" type="Label" parent="Upgrade Slots/UpgradeSlot1"]
modulate = Color(0, 100, 0, 1)
layout_mode = 0
offset_left = 5.0
offset_right = 15.0
offset_bottom = 23.0
scale = Vector2(0.75, 0.75)
text = "*"

[node name="Upgrade Sprite" type="Sprite2D" parent="Upgrade Slots/UpgradeSlot1"]
z_index = -1
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_3nrpj")

[node name="CooldownRect" type="TextureRect" parent="Upgrade Slots/UpgradeSlot1"]
modulate = Color(0, 0, 0, 0)
z_index = -1
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 54.0
offset_bottom = 56.0
scale = Vector2(0.5, 0.5)
texture = SubResource("CanvasTexture_jbpjp")

[node name="UpgradeSlot2" type="TextureRect" parent="Upgrade Slots"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_gcuxo")

[node name="Slot2Highlight" type="TextureRect" parent="Upgrade Slots/UpgradeSlot2"]
visible = false
layout_mode = 0
offset_left = -4.0
offset_top = -4.0
offset_right = 36.0
offset_bottom = 36.0
texture = ExtResource("6_jxklt")

[node name="Label" type="Label" parent="Upgrade Slots/UpgradeSlot2"]
modulate = Color(0, 100, 0, 1)
layout_mode = 0
offset_left = 5.0
offset_right = 15.0
offset_bottom = 23.0
scale = Vector2(0.75, 0.75)
text = "*"

[node name="Upgrade Sprite" type="Sprite2D" parent="Upgrade Slots/UpgradeSlot2"]
z_index = -1
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_6jssq")

[node name="CooldownRect" type="TextureRect" parent="Upgrade Slots/UpgradeSlot2"]
modulate = Color(0, 0, 0, 0)
z_index = -1
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 54.0
offset_bottom = 56.0
scale = Vector2(0.5, 0.5)
texture = SubResource("CanvasTexture_jbpjp")

[node name="UpgradeSlot3" type="TextureRect" parent="Upgrade Slots"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_gcuxo")

[node name="Label" type="Label" parent="Upgrade Slots/UpgradeSlot3"]
modulate = Color(0, 100, 0, 1)
layout_mode = 0
offset_left = 5.0
offset_right = 15.0
offset_bottom = 23.0
scale = Vector2(0.75, 0.75)
text = "*"

[node name="Upgrade Sprite" type="Sprite2D" parent="Upgrade Slots/UpgradeSlot3"]
z_index = -1
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_uflt7")

[node name="CooldownRect" type="TextureRect" parent="Upgrade Slots/UpgradeSlot3"]
modulate = Color(0, 0, 0, 0)
z_index = -1
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 54.0
offset_bottom = 56.0
scale = Vector2(0.5, 0.5)
texture = SubResource("CanvasTexture_jbpjp")

[node name="UpgradeSlot4" type="TextureRect" parent="Upgrade Slots"]
z_index = 4
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_gcuxo")

[node name="Label" type="Label" parent="Upgrade Slots/UpgradeSlot4"]
modulate = Color(0, 100, 0, 1)
layout_mode = 0
offset_left = 5.0
offset_right = 15.0
offset_bottom = 23.0
scale = Vector2(0.75, 0.75)
text = "*"

[node name="Upgrade Sprite" type="Sprite2D" parent="Upgrade Slots/UpgradeSlot4"]
z_index = -2
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_jbpjp")

[node name="CooldownRect" type="TextureRect" parent="Upgrade Slots/UpgradeSlot4"]
modulate = Color(0, 0, 0, 0)
z_index = -1
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 54.0
offset_bottom = 56.0
scale = Vector2(0.5, 0.5)
texture = SubResource("CanvasTexture_jbpjp")
